# nc-rd-face

./: .gitignore  CMakeLists.txt  README.md  face_detect.cpp  facemask.cpp  headpose.cpp  vision.cpp
facemask/facemask/: main.cpp
facemask/facemask.xcodeproj/: project.pbxproj
facemask/facemask.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
facemask/facemask.xcodeproj/project.xcworkspace/xcuserdata/nhancao.xcuserdatad/: UserInterfaceState.xcuserstate
facemask/facemask.xcodeproj/xcshareddata/xcschemes/: facemask.xcscheme
facemask/facemask.xcodeproj/xcuserdata/nhancao.xcuserdatad/xcschemes/: xcschememanagement.plist
